# akzelbot

./: .gitignore  Cargo.toml  README.md  meson.build
config/: settings.txt
data/: com.github.akzel94.akzelbot  com.github.zelikos.akzelbot.appdata.xml.in  com.github.zelikos.akzelbot.desktop.in  com.github.zelikos.akzelbot.gresource.xml  com.github.zelikos.akzelbot.gschema.xml  command_list.txt  meson.build
data/styles/: Application.css
po/: POTFILES
po/extra/: POTFILES
src/: Application.vala  Bot.py  Initialize.py  Main.py  Read.py  Run.py  Settings.py  Socket.py  meson.build  test.py
src/Widgets/: MainWindow.vala
